--- a/app/src/main/res/layout/fragment_phone_list.xml
+++ b/app/src/main/res/layout/fragment_phone_list.xml
@@ -11,6 +11,7 @@
         android:id="@+id/grid_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:spanCount="1"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />
 
