--- a/app/src/main/res/layout/fragment_phone_name.xml
+++ b/app/src/main/res/layout/fragment_phone_name.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,19 +9,45 @@
 
     <TextView
         android:id="@+id/phone_name"
-        android:layout_width="wrap_content"
-        android:layout_height="470dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="260dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="144dp"
+        android:text="@string/hello_blank_fragment"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/hello_blank_fragment" />
-<TextView
-    android:id="@+id/phone_price"
-    android:layout_width="wrap_content"
-    android:layout_height="16dp"
-    app:layout_constraintStart_toStartOf="@+id/phone_name_smartphone_activity"
-    app:layout_constraintTop_toBottomOf="@+id/phone_name_smartphone_activity" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/phone_price"
+        android:layout_width="259dp"
+        android:layout_height="35dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="4dp"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/phone_name" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="62dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="144dp"
+        android:layout_marginEnd="24dp"
+        android:text="Name"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/phone_name"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/price"
+        android:layout_width="62dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="24dp"
+        android:text="Price"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@+id/phone_price"
+        app:layout_constraintTop_toBottomOf="@+id/name" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
