--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,8 +8,8 @@
     <fragment
         android:id="@+id/phoneListFragment"
         android:name="com.example.hw_product_recycleview.PhoneListFragment"
-        android:label="fragment_phone_list"
-        tools:layout="@layout/fragment_phone_list" >
+        android:label="Phone List"
+        tools:layout="@layout/fragment_phone_list">
         <action
             android:id="@+id/action_phoneListFragment_to_phoneNameFragment"
             app:destination="@id/phoneNameFragment" />
@@ -17,7 +17,7 @@
     <fragment
         android:id="@+id/phoneNameFragment"
         android:name="com.example.hw_product_recycleview.PhoneNameFragment"
-        android:label="fragment_phone_name"
+        android:label="Phone details"
         tools:layout="@layout/fragment_phone_name">
         <argument
             android:name="name"
